# gopro2frames

./: .gitignore  .gitmodules  README.md  config.ini  gfmhelper.py  gfmmain.py  pyproject.toml
docs/: LOGIC.md
src/gopro2frames/: build.py  cli.py  core.py  helper.py
tests/gps_times/: final_time_tests.py
